[package]
name = "chickadees"
version = "0.1.0"
authors = ["vedangj044 <vedangj044@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0.64"
serde = "1"
rustc-serialize = "0.3.24"
redis = "0.20.0"
anyhow = "1.0.40"
rand = "0.8.3"